# spec-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sddkit/: __init__.py  cli.py
src/sddkit/agents/: registry.py  resolver.py
src/sddkit/commands/: __init__.py  agent.py  check.py  hook.py  init.py  new.py  prompt.py  skill.py  sync.py  use.py
src/sddkit/engines/: prompt.py  template.py
src/sddkit/templates/: plan.md.j2  tasks.md.j2
src/sddkit/templates/agents/: claude-code.md.j2  generic.md.j2
src/sddkit/templates/agents/aider/: .aider.conf.yml.j2  CONVENTIONS.md.j2
src/sddkit/templates/agents/claude-code/: CLAUDE.md.j2  settings.json.j2
src/sddkit/templates/agents/copilot/: copilot-instructions.md.j2
src/sddkit/templates/agents/cursor/: .cursorrules.j2
src/sddkit/templates/agents/gemini-cli/: GEMINI.md.j2  GEMINI_TOOLS.md.j2
src/sddkit/templates/agents/generic/: AGENTS.md.j2
src/sddkit/templates/agents/windsurf/: .windsurfrules.j2
src/sddkit/templates/prompts/: execute-spec.md.j2  sync-agent.md.j2  update-constitution.md.j2  update-plan.md.j2  update-spec.md.j2  update-tasks.md.j2
src/sddkit/templates/prompts/copilot/: execute-spec.prompt.md.j2  new-spec.prompt.md.j2  sync-agent.prompt.md.j2
src/sddkit/templates/scripts/: new-spec.ps1.j2  new-spec.sh.j2  validate.ps1.j2  validate.sh.j2
templates/: constitution.md.j2  spec.md.j2
templates/agents/: copilot.md.j2  cursor.md.j2  gemini-cli.md.j2
templates/prompts/: execute-spec.md.j2  new-spec.md.j2
templates/scripts/: new-spec.ps1.j2  new-spec.sh.j2  validate.ps1.j2  validate.sh.j2
(+19 files in other folders)
