[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-builder"
version = "0.1.0"
description = "A lightweight, agent-agnostic toolkit for Spec-Driven Development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
sdd = "sddkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sddkit"]

[tool.hatch.build.targets.wheel.shared-data]
# no shared data needed

[tool.hatch.build.targets.wheel.force-include]
# templates are inside the package, picked up automatically by packages above

[tool.hatch.metadata]
allow-direct-references = true
